--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -11,15 +11,21 @@ title: 4. Emerging Learning Designs
 
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
+-   [Exploring issues and context from practitioner interviews and
+    existing
+    research](#exploring-issues-and-context-from-practitioner-interviews-and-existing-research)
 -   [Short vignette illustrating shifts in scope of
     activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
-    -   [Commentary on Vignette](#commentary-on-vignette)
+    -   [Context of Vignette](#context-of-vignette)
 -   [Summary of design evolution](#summary-of-design-evolution)
 -   [Commentary on evolution of design by
     Phase](#commentary-on-evolution-of-design-by-phase)
-    -   [Phase one and two](#phase-one-and-two)
-    -   [Phase Three & Four](#phase-three-four)
-    -   [Phase Five](#phase-five)
+    -   [Explorations and innovations in P1 and
+        P2](#explorations-and-innovations-in-p1-and-p2)
+    -   [P3 and P4: The main game making
+        programmes](#p3-and-p4-the-main-game-making-programmes)
+    -   [P5 - Adapting to MakeCode
+        Arcade](#p5---adapting-to-makecode-arcade)
     -   [Description of the nested levels of activity & tools
         used](#description-of-the-nested-levels-of-activity-tools-used)
         -   [Diverse Environmental
@@ -37,19 +43,20 @@ title: 4. Emerging Learning Designs
     -   [Facilitator Design Tensions](#facilitator-design-tensions)
         -   [Tensions surrounding authenticity of coding environment /
             template](#tensions-surrounding-authenticity-of-coding-environment-template)
-    -   [Participant conflicts /
-        contractions](#participant-conflicts-contractions)
-        -   [1. Identity hardcore coding & disfunctional group work -
-            P1](#identity-hardcore-coding-disfunctional-group-work---p1)
-        -   [2. Participant experience of Contradiction - Conflict - not
-            enough support
-            available](#participant-experience-of-contradiction---conflict---not-enough-support-available)
--   [Exploring affordances of Key responses to emerging
-    tensions](#exploring-affordances-of-key-responses-to-emerging-tensions)
-    -   [Code playgrounds, and web
-        technology](#code-playgrounds-and-web-technology)
-    -   [Structuring supporting
-        resources](#structuring-supporting-resources)
+-   [Participant conflicts /
+    contractions](#participant-conflicts-contractions)
+    -   [1. Identity hardcore coding & disfunctional group work -
+        P1](#identity-hardcore-coding-disfunctional-group-work---p1)
+    -   [2. Participant experience of Contradiction - Conflict - not
+        enough support
+        available](#participant-experience-of-contradiction---conflict---not-enough-support-available)
+        -   [Tensions and related to navigation of various
+            documentations
+            sources](#tensions-and-related-to-navigation-of-various-documentations-sources)
+        -   [Code playgrounds, and web
+            technology](#code-playgrounds-and-web-technology)
+        -   [Structuring supporting
+            resources](#structuring-supporting-resources)
     -   [3. Facilitator conflict addressing the Play
         Paradox](#facilitator-conflict-addressing-the-play-paradox)
         -   [Learning Dimensions Map](#learning-dimensions-map)
@@ -116,14 +123,15 @@ Thus, this chapter;
 
 ## Exploring issues and context from practitioner interviews and existing research
 
+While the literature on game making and other forms of digital making is extensive, much has a focus on curricula driven, personal knowledge. Research in the domain of informal learning and the resulting characteristics and emerging tensions is less prevalent. In addition the process of writing interview questions and the conversational process of semi-structured interviews helped expose new streams of thought, that which while present in existing researched helped bring them into clearer focus.
 
-**Recap of context and specifics of designing for informal learning**
+**Summary of background of interviewees**
 
-- my interest in informal learning - recap rogoff and similar - and - issues of designing for informal settings
-- design based experiments - some factors - transition from previous chapter
+Saskia Leggett is a researcher who was active in the in Creative Family Learning program under direction of Ricarosa Roque. She took a leading role in creating the programme's support resources. Matt Curinga is an academic at Columbia and teaches in educational technology and computer science. He is also active in a non-profit organisation, Zero Day Camp, promoting learning coding and engineering through engaging projects. Dave  Potts is a professional programmer and a parent and volunteer at Coder Dojo which is a volunteer run teaching technology monthly event. James Clegg is PGCE Computing student/teacher and volunteer student helper for the game making programme.
 
+**Summary of background of interviewees**
 
-**Issues arising from practitioner interviews**
+In my analysis, I have proritised data which in forms the first research question and specifically addressing barriers and tensions for both practitioners and participants which exist in this domain of activity.
 
 
 <!-- The design description is framed within DBR language and concepts. -->
@@ -223,7 +231,7 @@ https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/
 
 ## Commentary on evolution of design by Phase
 
-### Phase one and two
+### Explorations and innovations in P1 and P2
 
 <!-- NOTE - The evolution involves phases and then tension - what and how to cover both?  -->
 <!-- This phase took place before the official start of this research and relevant ethics application. As such,  -->
@@ -250,9 +258,6 @@ Other emerging tensions and participant conflicts are explored in the next secti
 The requirements of this compressed time frame aligned with feedback to prompt me to design an accelerated process to bump start the game-production process.
 
 The new intervention involved a starting template and printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences.
-
-
-
 
 <!-- Have a look at this document which outlines Structuring and Scaffolding Phaser Activities from Phaser Book
 https://docs.google.com/document/d/1lk-8dHFFNbFXFtE5vV6_GHXYRzU7ATWZAIe-hNunyx8/edit#
@@ -313,26 +318,25 @@ The concept of the feel of the game or the challenges maps to the Dynamics of MD
  -->
 
 
-### Phase Three & Four
+### P3 and P4: The main game making programmes
 
-The delivery of the second phase in early 2019 drew on this participant feedback and detailed reading of relevant literature to bring substantial changes to the programme.
+By P3 most of the resources and activities were in place and relatively stable. There were some incremental evolutions in the supporting resources that stemmed from participant feedback and detailed reading of relevant literature.
 
-The key addition built on the quick cards of the previous phase, that being to pre-prepare code examples illustrating key game features requested by participants.
+One key addition brought to start of P3 was a more coherent list of tutorials and code examples illustrating key game features that had been requested by participants. These were presented in a web page together with the starting template as a collection of game design patterns.
 
-In phase one I worked with learners when they were creating a wish list of game features to add to their game.
+P4 used the same toolset as P3 however in addition, drew on my previous work with the MMU Faculty of Education drama department [@caldwell_drama_2019] to create a simple drama process to give an external motivation and narrative to the creation of games using for a fictional audience of visiting aliens.
 
-WHERE TO INCLUDE DISCUSSION ON HOW THESE WERE GROUPED.
+The participant activity of these stages and tensions between system elements are discussed in detail in the remainder of this chapter and in following chapters.
 
-Some of these were aesthetic in nature to do with the graphical representation of game characters, hazards and background images. Some most accurately described as game mechanics including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned other fundamental aspects concerning game space including: size of game world,
 
-I developed tutorials to support students implement these elements.
+<!-- This approach aligns with inclusive education principles in that it increases the choices of students, scaffolds the way they can access resources and allows them to keep a track of their own progress. -->
 
-This approach aligns with inclusive education principles in that it increases the choices of students, scaffolds the way they can access resources and allows them to keep a track of their own progress.
+<!-- In phase one I worked with learners when they were creating a wish list of game features to add to their game. -->
 
 
 <!-- I also carried out four video-recorded interviews with practitioners who work with creative methods and technology with young people or families. Early analysis of these interviews has helped shape the evolving design of my programme and has brought into focus key areas of interest already identified in journal entries. -->
 
-Phase four used the same toolset as previous phase with one small change.  In addition, I drew on some previous work with the MMU Faculty of Education drama department [@caldwell_drama_2019] to create a simple drama process to give a simple external motivation and narrative to the creation of games for a fictional audience of visiting aliens. This element of the learning design was designed to increase engagement of young people, to scaffold meta-reflection processes, and to allow parents to explore digital issues.
+
 
 <!-- These aspects inform the first half of the next chapter which addresses the process of creating an inclusive creative coding environment. -->
 
@@ -344,6 +348,7 @@ Drama and fictional scenarios can help explore issues and reduce learner anxiety
 <!-- #### Building Identities as Game Makers (dropped) -->
 
 <!-- NOTE - MAY NEED TO REWRITE to clearly precursor next chapter -->
+
 
 <!-- One warm activities that took on a life of its own was a group activity of taking a Bartle test (what kind of game player are you) as extended spectrum line/grid activity [FIND DESCRIPTION SOURCE]. The process of exploring identity in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. I began to make journal notes on this subject and talk to other games study practioners. I began to ask the question can the surfacing maker types (as per player types) encourage awareness and celebrate the emerging practices that the community was producing. -->
 <!--
@@ -366,15 +371,11 @@ I translated player types to maker types based on notes in my observation journa
 so there's a problem in getting any data from this
 however the rationale is intact and  -->
 
-### Phase Five
+### P5 - Adapting to MakeCode Arcade
 
-I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade tool. MakeCode Arcade uses block language system similar to that of Scratch, inheriting those advatages (list here or previous) FIND SOURCE - HOW TO BEST REFER BACK TO LIT REVIEW?
+I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade tool. MakeCode Arcade uses block language system. The template, resources and facilitation approach was based that of P3 and P4.
 
-The template, resources and facilitation approach was based closely on the previous stages but adapted to use screenshots of the block code of the MakeCode Arcade tool.
-
-I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum.
-
-To do this I added a learning dimensions map. This is explored in a later section of this chapter.
+I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map. This is explored in a later section of this chapter.
 
 
 
@@ -423,7 +424,6 @@ Insert an AT diagram from here - https://docs.google.com/presentation/d/1vR6dzFG
 
 ![At Dia 1](./Pictures/At_dia_1_v1.png){width=95%}
 
-
 In exploring the community of the activity system.
 
 While the primary audience for the created games are peers via ongoing informal testing, the theoretical end users are students and staff in the Manchester Met Brooks building where their games will be shared in arcade cabinets.
@@ -458,7 +458,8 @@ The process of making a game was driven from early stages by learners requests t
 By this stage, the process of collecting a user generated list of features and trying to respond to all of them as a facilitator had been abandoned as unrealistic. Instead a collection or menu of elements for the chosen game type of a platformer was in place. From now now these elements are named game design patterns from professional and amateur game coding terminology.
 
 
-In the example above Toby progresses from playtesting his own game to altering it by adding a new platform to the game. Toby retests immediately by clicking on the preview element of the game. On this page participant can pick missions from a choice of printed resources. There were four colour themed categories of missions. _Game mechanics_ are features to do with the actions of the game. _Game space_ patterns address the layout of the game. _Game polish_ patterns involve adding music, backgrounds, graphics and story elements. Finally _System and Challenge_ patterns look at how different elements interact to create challenge in the game.
+In the example above Toby progresses from playtesting his own game to altering it by adding a new platform to the game. Toby retests immediately by clicking on the preview element of the game. On this page participant can pick missions from a choice of resources.
+
 
 Toby then browses the web page of a menu of game design patterns and selects moving enemies. At this scope of activity the goal is to increase the challenge and variety of the game experience. It appears probable that his is also guided by the expectations embodies in the page itself. EXPLAIN affordances OF DESIGN HERE.
 
@@ -504,74 +505,32 @@ Others in the group did not experiment in this way and used more direct help or 
 - smaller - implementing or changing code constructs to enact or change GDPs -->
 
 
-### Commentary the use of AT scopes in data ANALYSIS
-
-#### Levels of Abstraction om this design (perhaps drop?)
-
-COMPARE TO THE PREVIOUS CHAPTER AND COMPRESS THIS
-MOVE ASMAP TOO PREVIOUS
-
-**moved from previous chapter_**
-The game making process can be viewed as nested activity
-
-- wider education
-- game making
-- pattern implementation
-- specific actions
-
-While game making can be seen superficially as the primary activity, I argue that a narrower objective of implementing GDPs and the dependant actions became the most vital unit of activity for participants.
-
-From the perspective of participants, the goal of implementing individual game patterns rather than the overall goal of making of a game, took up the majority of their focus. This can be evidenced in the following observations;
-
-- the frequency of GDP language referring to patterns used by pairs in particular in the process of collaborating on their games
-- the utility of the smaller unit of analysis in aiding resource creation
-- the value of completing something concrete a sense of sustaining achievement.
-- the ability to reflect after implementing each sub project,
-- any other value for practitioners, parents and young participants - i.e. in navigation and goal setting.
-
-**moved from previous chapter_**
-
-The implementation of GDPs as a unit of analysis for the researcher also has the following utility / validity;
-
-- There is a practicality in terms of defining possible boundaries of what to analyse in depth.
-- There is a more frequent iteration present - usually a period of playtesting after each new pattern added.
-- This research with a practitioner focus, looks to identify emerging barriers to comprehension, communication and practical barriers to implementing code structures. Thus a smaller unit that allows a large amount of granularity is useful. (compared to broader observations)
-- Each GDP can be seen as a project given an interpretation of project as the concrete implementation of a goal
-- That concreteness / implementation is particularly valid given the regular play-testing of creations often after each GDP is added in a peer environment.
-
-This sentiment is echoed by something I found in the video data. As one parent Fi expressed when looking at the documentation for implementing one of the GDPs. "It’s like a project in itself really"
-
-NOTE REWRITE THIS
-
-Analysing the implementation of GDPs as a unit of activity allow the use of useful concepts to explore the specifics of participant behaviour. In the methodology and design chapter I explored the concept of resolving tensions involved in tool use and interaction with the learning design. In this section I briefly explore the utility of the concepts of activity, actions and operations when applied to implementing GDPs [@kuutti_activity_1995].
-
-  "...actions consist of chains of operations, which are well-defined habitual routines used as answers to conditions faced during the performing of the action. Initially each operation is a conscious action, consisting of both the orientation and execution phases, but when the corresponding model is good enough and the action has been practiced long enough, the orientation phase will fade and the action will be collapsed into an operation, which is much more fluent." [@kuutti_activity_1995]
-
+<!-- ### Commentary the use of AT scopes in data analysis
 
 <!-- NOTE
 Each of these with differing levels of abstraction.
 Break down that of GDPs? -->
 
-**Original writing**
 
-In the last chapter, we examined the use of Rogoff's 3 lenses of cultural, social and personal activity. We can see a broad alignment of these lenses and the scopes of the activity systems above.
+<!-- In the last chapter, we examined the use of Rogoff's 3 lenses of cultural, social and personal activity. We can see a broad alignment of these lenses and the scopes of the activity systems above.
 
 This has utility to both researcher and learning designer. The observations of the following chapters are based on this approach of using lenses to focus in on relevant activity.
 
-NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and possibly Bevan and Petrich
+NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and possibly Bevan and Petrich -->
+
+**Transition**
+
+In a simlar approach to Rogoff's 3 lenses of cultural, social and personal activity analysis of activity using the scopes of activity systems explore above is useful to researchers to highlight possible tensions and contradictions between competing goals of interrelated activity systems. For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills
 
 
 ## Conflicts and design tensions experienced by participants and facilitator/s
 
-
 <!-- As outlined in the table above I carried out four stages of workshops and development with home educator families. I will outline decisions behind the design activities at key stage of activity   -->
 <!--
 **Summary table of tensions ONLINE HERE**
-
 https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit
 
 **3M Matrix tensions ONLINE HERE**
-
 https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit
 Matrix of 3M Game Making Model - Pedagogical Features explored through Tensions and Resolutions -->
 
@@ -581,26 +540,17 @@ https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/
 
 <!-- NOTE - DEVELOP THIS ASPECT OF INCLUSIVE ENVIRONMENT TO REDUCE STRESS - MOVE FROM NEXT CHAPTER?  -->
 
-It is useful to return to the exploration of key terms of the theoretical framework at this stage.
+As explored in the theoretical framework in activity theory tensions and contradictions are a vital source of change and evolution of new and ongoing activity systems.   
 
-Conflicts / contradictions  - stop progress - and involve barriers.
+On a smaller scale, design tensions exist. These do not block progress completely but may disrupt some activities. Combinations of tensions can compound to create longer lasting and more serious conflicts if not resolved [Engestrom early].
 
-On a smaller scale, design tensions exist. These do not block progress completely but may disrupt some activities.
+It also useful to recap here the interpretations of agency explored in the theoretical framework. Instrumental agency is relevant here to help examine and the work of learning designers to remove  barriers, Transformational and authorial agency serves to explore the potential for learners to address and overcome tensions and conflicts in their own way. In Sannino's later work on transformational agency TADS conflicts are examined - greater scope than tensions - thus larger shifts are implied.
 
-However combinations of tensions can compound to create longer lasting and more serious conflicts if not resolved.
+<!-- (Relational agency?) -->
 
 In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways.
 
-In this chapter I examine both tension and initial conflicts that occur in the first phase of of the learning design.
-
-It important to re-examine the difference between types of agency explored in the theoretical framework.
-
-Instrumental agency is relevant here to help examine and the work of learning designers to remove  barriers, Transformational and authorial agency serves to explore the potential for learners to address and overcome tensions and conflicts in their own way.
-
-(Relational agency?)
-
-In Sannino's later work on transformational agency TADS conflicts are examined - greater scope than tensions - thus larger shifts are implied.
-
+In the following sections of this chapter I focus on such which relate directly to the research questions and which help inform the findings of later chapters. In particular I draw out more visible conflicts which threaten more serious distruption of activities.
 
 ### Facilitator Design Tensions
 
@@ -652,7 +602,7 @@ Time consideration of the process of being involved in an online community may r
 Also - the diversity of creations available on a online commmunity  could remove the more communal experience of the designed limitations.
 
 
-### Participant conflicts / contractions
+## Participant conflicts / contractions
 
 Beyond the design tensions above that were smaller in scope and addressed relatively quickly, this section examines more extensive contradictions between system elements which developed into conflicts which significant in stopping participant progress. The first involves clashes of identity and ambition and the second frustrations due to technical processes.
 
@@ -661,7 +611,7 @@ Beyond the design tensions above that were smaller in scope and addressed relati
  2. Frustrating delays - Not enough support from facilitator/s:  especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating needing
 
 
-#### 1. Identity hardcore coding & disfunctional group work - P1
+### 1. Identity hardcore coding & disfunctional group work - P1
 
 **Learner anxiety if hardcore coding environment and peer working dynamics**
 
@@ -692,7 +642,7 @@ The fruits of this freedom of participation are explored in chapter five.
 https://docs.google.com/document/d/1VL8FPnrBUbcpwL1nmGLCsF1t2JjkitQV_3N8DYeFcoM/edit
  -->
 
-#### 2. Participant experience of Contradiction - Conflict - not enough support available
+### 2. Participant experience of Contradiction - Conflict - not enough support available
 
 The nature of this conflict was compounded tensions
 
@@ -758,11 +708,11 @@ Most forms of future documentation and support were originated at this stage. Th
  In my journal I named this concept _meeting yourself in the middle_ to represent the possibility of retracing the process of learning from first principles.
  Narratively the equivalent of a prequel.   
 
-##### Tensions and related to navigation of various documentations sources
+#### Tensions and related to navigation of various documentations sources
 
 The previous stage had created a variety of supporting documents and processes. In phase two I struggled to communicate these options consistently and effectively to students.
 
-**Use of a non-linear menu of game design patterns**
+**Use of a collection of game design patterns**
 
 In PBL, UDL and other models - learner choice and building agency is shown to be of value in increasing engagement and ownership over learning. However, building the relevant knowledge to identify, agree on and implement game patterns from scratch takes time and without relevant scaffolding too so long that it negatively impacted motivation.
 
@@ -772,22 +722,33 @@ Learning resources linked to game design patterns were presented in a menu forma
 - make documentation relatable to existing gameplay experience
 - develop use of common GPD terminology
 
+Some of these were aesthetic in nature to do with the graphical representation of game characters, hazards and background images. Some most accurately described as game mechanics including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned other fundamental aspects concerning game space including: size of game world,
+
+
+
+
 THE FOLLOWING IS EXPLORED IN EXAMPLE ABOVE - RELATE IT SOMEHOW AND FIND ANALYSIS HERE.
 There were two main ways of approaching adding a new pattern. One to examing a code example which was built around the same code base.
 
 This would involve searching for new code constructs and notes in the code designed to orientate the learner, alerting them to the location and purpose of the relevant code. The other was longer form step by step help.
 
-## Exploring affordances of Key responses to emerging tensions
 
-### Code playgrounds,  and web technology
+
+
+#### Code playgrounds,  and web technology
 
 The last chapter outlined the use and design characteristics of the starting point of an incomplete 2D platformer with low-spec graphics, with graphical scaffolding for text-based code, and deliberately broken.
 
 While the following chapter explores the use of game design patterns in detail, this section addresses the impact of the template on participant coding practices, based on video observations of learners directly interaction with the template triangulated with journal notes from phases 2 and 3 and participant feedback from phase one.
 
-### Structuring supporting resources
+#### Structuring supporting resources
 
-In trying to organise and represent code examples to participants in a logical way I drew on existing frameworks of game elements.
+In trying to organise and represent code examples to participants in a logical way I drew on existing frameworks of game elements. Initial design were just in response to grouping participant requests. I experimented with different themes to contains these and also the concept of mapping the different challenges by difficulty on a map via structuring via concentric rings.
+
+
+![Scan of Journal Sketch of early attempt at dividing features by type and difficulty](./Pictures/pattern_types_sketch.png){width=85%}
+
+Scan of Journal Sketch of early attempt at dividing features by type and difficulty
 
 - see Schell's lenses work for a more complete taxonomy.
 - MDA framework
@@ -795,10 +756,30 @@ In trying to organise and represent code examples to participants in a logical w
 
 I was inspired by work which merged academic and professional interpretations of game elements with those used to kick start beginners in the process of hacking games in a Game Jam. This alignment suits my approach of demystifying technology.
 
-Finally I decided on the following framework
+In early stages I was influenced by the categorisation of game elements used by GSM team which also was implemented in the Game Jam Guide [@cornish_game_2018; @institute_of_play_gamestar_nodate].
+The key elements are:
 
-SCAN OF THE SKETCH OF MY DIVISION
+- SPACE: Where the game takes place.
+- GOAL: What is the objective of the game? What are you trying to do?
+- COMPONENTS: What are all the objects or actors in the game?
+- MECHANICS: What actions take place in the game. What are the verbs involved?
+- RULES: What can or can’t you do in the game? What defines boundaries? Does play happen in real time or do you take turns?
 
+This work aligns with the MDA framework which allows shiftes focus to  the user experience which had appeal to making the process more accessible.
+
+Later, I note the following limitations.
+- The language is not accessible to teachers and learners.
+- The definition of aesthetics is very wide incorporating user experience in a way that was not suitable to learners.
+
+A blend of the two gave the following staring coding scheme in terms of activities related directly to adding features or altering the game.
+
+Finally I decided on the following framework for P3 which we retained for P4.There were three colour themed categories of missions which existed in addition to the core challenges of the _home_ templated game. _Game mechanics_ are features to do with the actions of the game. _Game space_ patterns address the layout of the game. _Game polish_ patterns involve adding music, backgrounds, graphics and story elements.
+
+In P5 I extended the scheme to included  _System and Challenge_ patterns. These explore at how different elements interact to create challenge in the game.
+
+![Game Design Themes](./Pictures/four_gdp_themes.png){width=95%}
+
+While not driven by other research at this stage, in retrospect, the goals of theming the patterns by function and difficulty align with the work by Holopainen and colleagues on the use of pattern collections to help structure game making [@holopainen2007teaching].  
 
 <!--
 ### Building Identities as Game Makers DROP THIS FOR NOW MOVE TO NEW PAPER
@@ -832,6 +813,9 @@ My journal notes see an evolution of attempts to try to build into the program, 
  -   **Glitchers:** mess around with the code trying to see if they can break it interesting ways and cause a bit of havoc for other userse positioning and if they could give examples of that behaviour.
 
 An additional rationale for this process was to help reduce potential internal bias about the kind of process that a computer programmer should adopt, echoing the call for pluralism in approaches explored earlier in our section on germ cell concept Papert and Turkle, 1990). In short, my message was to participants there are more than one way the skin a cat. When you are learning to code follow your own preferences and try to observe and reflect on what works well for you. -->
+
+
+
 ### 3. Facilitator conflict addressing the Play Paradox
 
 In later chapters I explore the impact of attempts to resolve some of tensions explored above via recordings of data.
@@ -917,6 +901,12 @@ REPLACE WITH 360 OF MAPS
 <!-- Working with learner stress ##### Building Identities as Game Makers
 
 NOTE - THIS COULD WORK IN THE INTRODUCTION TO THE CHAPTER - LINK WITH PREVIOUS ONE.
+
+
+
+
+### not sure
+
 
 One warm activities that took on a life of its own was a group activity of taking a Bartle test (what kind of game player are you) as extended spectrum line/grid activity [FIND DESCRIPTION SOURCE]. The process of exploring identity in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. I began to make journal notes on this subject and talk to other games study practioners. I began to ask the question can the surfacing maker types (as per player types) encourage awareness and celebrate the emerging practices that the community was producing.
 
